--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,7 +22,7 @@ jobs:
           matrix-step-name: ${{ github.job }}
           matrix-key: ${{ matrix.platform }}
           outputs: |-
-            image: prefix_${{ matrix.platform }}
+            image: prefix_${{ matrix.platform }}_bar
 
   ## Read matrix outputs 
   read:
@@ -44,7 +44,7 @@ jobs:
     steps:
       - uses: nick-fields/assert-action@v1
         with:
-          expected: prefix_i386:i386
+          expected: prefix_i386_bar:i386
           ## This how you can reference matrix output
           actual: ${{ fromJson(needs.read.outputs.result).image.i386 }}
 
