--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -44,12 +44,12 @@ jobs:
     steps:
       - uses: nick-fields/assert-action@v1
         with:
-          expected: prefix_i386_bar:i386
+          expected: prefix_i386_bar
           ## This how you can reference matrix output
           actual: ${{ fromJson(needs.read.outputs.result).image.i386 }}
 
       - uses: nick-fields/assert-action@v1
         with:
-          expected: prefix_arm64v8:arm64v8
+          expected: prefix_arm64v8_bar
           ## This how you can reference matrix output
           actual: ${{ fromJson(needs.read.outputs.result).image.arm64v8 }}
